azure/k8s/wrongsecrets-balancer-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: wrongsecrets-balancer
  labels:
    app: wrongsecrets-balancer
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: wrongsecrets-ctf-party
