azure/k8s/wrongsecrets-balancer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrongsecrets-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/issue-temporary-certificate: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wrongsecrets-balancer
                port:
                  number: 80
